# PositiveIntent

./: .gitignore  README.md  TestSvc.sln  build.py  install.sh  pyproject.toml
.github/workflows/: dotnet-desktop.yml
PositiveIntent/: AssemblyHelper.cs  BreakpointHelper.cs  Bypass.cs  PositiveIntent.csproj  PositiveIntent.sln  Program.cs  RC4.cs  StringHelper.cs  build.py
PositiveIntent/DINV.Data/: Native.cs  PE.cs  Win32.cs
PositiveIntent/DINV.Helpers/: Generic.cs  Native.cs  Utilities.cs
PositiveIntent/PositiveIntent/Properties/: Resources.resx
PositiveIntent/modules/: entropy.py  obfuscate.py  rc4.py
TestSvc/: Bypass.cs  Program.cs  TestSvc.csproj
TestSvc/DINV.Helpers/: Generic.cs  Native.cs  Utilities.cs
TestSvc/Properties/: Resources.Designer.cs  Resources.resx
modules/: build.py  entropy.py  obfuscate.py  rc4.py  sign.py
